--- a/DL/Assignment_2_Binary_Classification.ipynb
+++ b/DL/Assignment_2_Binary_Classification.ipynb
@@ -1,20 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "gpuType": "T4"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -35,35 +19,40 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {
+        "id": "c06Ku8qC3TMK"
+      },
+      "outputs": [],
       "source": [
         "# Load IMDB dataset\n",
         "\n",
         "num_words = 10000  # Only consider the top 10,000 words\n",
         "(x_train, y_train), (x_test, y_test) = imdb.load_data(num_words=num_words)"
-      ],
-      "metadata": {
-        "id": "c06Ku8qC3TMK"
-      },
-      "execution_count": 3,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {
+        "id": "lo5RKs1wobZB"
+      },
+      "outputs": [],
       "source": [
         "# Preprocess data\n",
         "\n",
         "max_review_length = 500\n",
         "x_train = pad_sequences(x_train, maxlen=max_review_length)\n",
         "x_test = pad_sequences(x_test, maxlen=max_review_length)"
-      ],
-      "metadata": {
-        "id": "lo5RKs1wobZB"
-      },
-      "execution_count": 4,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {
+        "id": "GA3Fm2_bxRZr"
+      },
+      "outputs": [],
       "source": [
         "# Define the model\n",
         "from tensorflow.keras.models import Sequential\n",
@@ -74,31 +63,23 @@
         "model.add(Embedding(num_words, embedding_vector_length, input_length=max_review_length))\n",
         "model.add(LSTM(128))\n",
         "model.add(Dense(1, activation='sigmoid'))\n"
-      ],
-      "metadata": {
-        "id": "GA3Fm2_bxRZr"
-      },
-      "execution_count": 5,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Compile the model\n",
-        "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])"
-      ],
+      "execution_count": 6,
       "metadata": {
         "id": "LOmWemCNxpJP"
       },
-      "execution_count": 6,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Compile the model\n",
+        "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Train the model\n",
-        "model.fit(x_train, y_train, validation_data=(x_test, y_test), epochs=3, batch_size=64)"
-      ],
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -106,11 +87,10 @@
         "id": "ra9PwiOExRWM",
         "outputId": "b65cb22e-984c-4397-a32a-d499bb50ee07"
       },
-      "execution_count": 7,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Epoch 1/3\n",
             "391/391 [==============================] - 64s 156ms/step - loss: 0.4604 - accuracy: 0.7771 - val_loss: 0.3314 - val_accuracy: 0.8592\n",
@@ -121,24 +101,24 @@
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "<keras.src.callbacks.History at 0x7f02b6a83ac0>"
             ]
           },
+          "execution_count": 7,
           "metadata": {},
-          "execution_count": 7
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# Train the model\n",
+        "model.fit(x_train, y_train, validation_data=(x_test, y_test), epochs=3, batch_size=64)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Evaluate the model\n",
-        "scores = model.evaluate(x_test, y_test, verbose=0)\n",
-        "print(\"Accuracy: {:.2f}%\".format(scores[1] * 100))"
-      ],
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -146,19 +126,28 @@
         "id": "xgqnMJG8xRSE",
         "outputId": "b1897c9f-60fc-47b2-e76e-217362402c87"
       },
-      "execution_count": 9,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Accuracy: 84.66%\n"
           ]
         }
+      ],
+      "source": [
+        "# Evaluate the model\n",
+        "scores = model.evaluate(x_test, y_test, verbose=0)\n",
+        "print(\"Accuracy: {:.2f}%\".format(scores[1] * 100))"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 12,
+      "metadata": {
+        "id": "qGyiWYUfxveG"
+      },
+      "outputs": [],
       "source": [
         "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
         "from tensorflow.keras.preprocessing.text import Tokenizer\n",
@@ -180,21 +169,11 @@
         "        return \"Positive\"\n",
         "    else:\n",
         "        return \"Negative\"\n"
-      ],
-      "metadata": {
-        "id": "qGyiWYUfxveG"
-      },
-      "execution_count": 12,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Take user input and test sentiment\n",
-        "user_input = input(\"Enter a movie review: \")\n",
-        "sentiment = predict_sentiment(user_input)\n",
-        "print(\"Predicted sentiment:\", sentiment)\n"
-      ],
+      "execution_count": 24,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -202,11 +181,10 @@
         "id": "08uHJtaqxywr",
         "outputId": "5eb585c0-7834-4ea7-813d-f0bf8778e4c6"
       },
-      "execution_count": 24,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Enter a movie review: movie is worthless\n",
             "1/1 [==============================] - 0s 24ms/step\n",
@@ -214,7 +192,38 @@
             "Predicted sentiment: Negative\n"
           ]
         }
+      ],
+      "source": [
+        "# Take user input and test sentiment\n",
+        "user_input = input(\"Enter a movie review: \")\n",
+        "sentiment = predict_sentiment(user_input)\n",
+        "print(\"Predicted sentiment:\", sentiment)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "https://colab.research.google.com/drive/12Z6lnjovGU9kp_fp_fepxQv99Qx_x824?usp=sharing"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "T4",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
