--- a/DL/Assignment_3_CNN.ipynb
+++ b/DL/Assignment_3_CNN.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -29,44 +15,49 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "dataset = keras.datasets.fashion_mnist.load_data()\n",
-        "(train_images, train_labels), (test_images, test_labels) = dataset"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "ZER2ODIYqMA7"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "dataset = keras.datasets.fashion_mnist.load_data()\n",
+        "(train_images, train_labels), (test_images, test_labels) = dataset"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "class_names = ['T-shirt/top', 'Trouser', 'Pullover', 'Dress', 'Coat', 'Sandal', 'Shirt', 'Sneaker', 'Bag', 'Ankle boot']"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "4cz1U5fesqv_"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "class_names = ['T-shirt/top', 'Trouser', 'Pullover', 'Dress', 'Coat', 'Sandal', 'Shirt', 'Sneaker', 'Bag', 'Ankle boot']"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "WWAdP5K2rlqM"
+      },
+      "outputs": [],
       "source": [
         "for i in range(10):\n",
         "    plt.subplot( 2,5, i+1 )\n",
         "    plt.imshow( train_images[i], cmap='gray' )\n",
         "    plt.xlabel( class_names[train_labels[i]] )\n",
         "plt.show()"
-      ],
-      "metadata": {
-        "id": "WWAdP5K2rlqM"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "ZSnFJz51qL7P"
+      },
+      "outputs": [],
       "source": [
         "#normalize\n",
         "# train_images = train_images / 255\n",
@@ -75,15 +66,15 @@
         "# Preprocess the data\n",
         "train_images = train_images.astype('float32') / 255.0\n",
         "test_images = test_images.astype('float32') / 255.0"
-      ],
-      "metadata": {
-        "id": "ZSnFJz51qL7P"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "9XMAWqf1F6-G"
+      },
+      "outputs": [],
       "source": [
         "# Build the model\n",
         "\n",
@@ -96,38 +87,38 @@
         "model.add(Flatten())\n",
         "model.add(Dense(128, activation='relu'))\n",
         "model.add(Dense(10, activation='softmax'))\n"
-      ],
-      "metadata": {
-        "id": "9XMAWqf1F6-G"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Train the model\n",
-        "model.compile( loss='sparse_categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "1t4B_WvyF8iF"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Train the model\n",
+        "model.compile( loss='sparse_categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "model.fit(train_images, train_labels, epochs=10)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "C3ZF1O43GERy"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "model.fit(train_images, train_labels, epochs=10)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "ixI8hGHoF8ej"
+      },
+      "outputs": [],
       "source": [
         "# Evaluate the model\n",
         "train_loss, train_acc = model.evaluate(train_images,  train_labels)\n",
@@ -139,39 +130,57 @@
         "\n",
         "# Use the model\n",
         "predictions = model.predict(test_images)\n"
-      ],
-      "metadata": {
-        "id": "ixI8hGHoF8ej"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "WkjkPC5dF8cL"
+      },
+      "outputs": [],
       "source": [
         "# Testing Predictions\n",
         "index = 85\n",
         "label = np.argmax(predictions[index])\n",
         "print(class_names[label])"
-      ],
-      "metadata": {
-        "id": "WkjkPC5dF8cL"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "3CHqVA4uKFAL"
+      },
+      "outputs": [],
       "source": [
         "plt.subplot(2,2,1)\n",
         "plt.imshow(test_images[index], cmap=None)\n",
         "plt.xlabel(class_names[test_labels[index]])"
-      ],
-      "metadata": {
-        "id": "3CHqVA4uKFAL"
-      },
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
-      "outputs": []
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "https://colab.research.google.com/drive/1QUPH5OFB0AbvpD3KPhuKDsdUlcZ4Ybdn?usp=sharing"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
